@@ -31,6 +31,7 @@ EXPORTS TIFFOpen
 	TIFFSetField
 	TIFFVSetField
 	TIFFWriteDirectory
+	TIFFRewriteDirectory
 	TIFFPrintDirectory
 	TIFFReadScanline
 	TIFFWriteScanline
